--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="ru"><head>
   <meta charset="utf-8">
   <title>RecordManager</title>
-  <base href="https:\\lakai4eg.github.io\record-manager\">
+  <base href="https://lakai4eg.github.io/record-manager/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
